# backup_websites

./: .gitignore  .pre-commit-config.yaml  .pre-commit-pytest.sh  .pylintrc  README.md  backup_sites.json  backup_website.py  constants.py  pyproject.toml  pytest.ini  requirements.txt  run_backups.sh  s3.py  tortilla-con-sal-backup.sh  tortilla_con_sal_files_backed_up.txt
src/backup_websites/: backup_website.py  constants.py  logging_config.py  s3.py  tortillaconsal.py  wait_for_completion.py
tests/: __init__.py  conftest.py  test_backup_website.py  test_logging_config.py  test_s3.py  test_tortillaconsal.py  test_wait_for_completion.py
