[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backup_websites"]

[project]
name = "backup_websites"
version = "0.1.0"
description = "Tool for backing up websites using wget and uploading to S3"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "boto3>=1.37.38",
    "click>=8.1.8",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy"
]

[project.scripts]
backup-website = "backup_websites.backup_website:main"

[tool.lint]
line-length = 88
target-version = "py38"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]  # Line too long

[tool.mypy]
disable_error_code = ["import-untyped"]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
