[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backup_websites"]

[project]
name = "backup_websites"
version = "0.1.0"
description = "Tool for backing up websites using wget and uploading to S3"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "click>=8.1.8",
    "boto3",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "pre-commit"
]

[project.scripts]
backup-website = "backup_websites.backup_website:main"

[tool.lint]
line-length = 88
target-version = "py38"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]  # Line too long

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]  # Line too long

[tool.mypy]
disable_error_code = ["import-untyped", "type-var"]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
